--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -44,6 +44,7 @@ footer img {
   height: auto;
 }
 
+/*---------------------------------------------------------------------*/
 /*INDEX*/
 main {
   background-color: #F6F1F1;
@@ -121,6 +122,7 @@ main {
   width: 300px;
 }
 
+/*--------------------------------------------------------------------------*/
 /* Plantel 2023 */
 main {
   background-color: #F6F1F1;
@@ -336,6 +338,54 @@ main {
   color: #ffd600;
   background-color: #0033a0;
   text-decoration: underline;
+}
+
+/*-------------------------------------------------------------------------*/
+/* responsive */
+@media screen and (max-width: 650px) {
+  /*Index*/
+  /* noticia1 */
+  .not1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .not1 h3 {
+    text-align: center;
+  }
+  .not1 p {
+    text-align: center;
+    text-align: justify;
+  }
+  .not1 img {
+    width: 80%;
+  }
+  /* iframe */
+  .presentacion iframe {
+    width: 500px;
+  }
+  /* cards */
+  .medina {
+    display: none;
+  }
+  /* La bombonera */
+  .historia iframe {
+    width: 500px;
+    margin-bottom: 10px;
+  }
+  .historia h2 {
+    text-align: center;
+  }
+  .img5 {
+    display: none;
+  }
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 5px;
+  }
 }
 
 /*# sourceMappingURL=estilos2.css.map */
