--- a/sass/otros/_mediaq.scss
+++ b/sass/otros/_mediaq.scss
@@ -1,3 +1,6 @@
+/*-------------------------------------------------------------------------*/
+//  Rsponsive
+
  /* responsive */
  @media screen and (max-width: 650px) {
 
