--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -143,11 +143,19 @@ main {
 }
 
 /*jugadores*/
+.jugadores {
+  max-width: 100%;
+  max-height: 100%;
+}
 .jugadores h2 {
   text-align: center;
   font-family: "Oswald", sans-serif;
   color: #0033a0;
   text-decoration: underline;
+}
+
+.espacios {
+  max-width: 100%;
 }
 
 /* cards */
@@ -158,6 +166,7 @@ main {
   font-size: 150%;
   text-shadow: none;
   text-decoration: none;
+  margin-bottom: 10px;
 }
 .card ul {
   list-style-type: none;
@@ -169,6 +178,9 @@ main {
   font-family: "Oswald", sans-serif;
   color: #0033a0;
   text-decoration: underline;
+  background-color: #ffd600;
+  border: 5px solid transparent;
+  box-sizing: border-box;
 }
 
 .card2 {
@@ -385,6 +397,25 @@ main {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-gap: 5px;
+  }
+  /*hitos historicos*/
+  .la-sexta h2, .intercontinental h2 {
+    text-align: center;
+  }
+  .carousel-inner {
+    margin-bottom: 10px;
+  }
+  /*plantel 2023*/
+  .espacios {
+    padding-left: 10px;
+    padding-right: 3px;
+  }
+  /*contactanos*/
+  .contactanos h1 {
+    text-align: center;
+  }
+  .contactanos p {
+    text-align: center;
   }
 }
 
