--- a/sass/estilos2.scss
+++ b/sass/estilos2.scss
@@ -1,10 +1,6 @@
 
-//  #0033A0
-//   #F6F1F1
-//    #FFFFF
-//    #ffd600
 
-@import"variables/mixins";
+@import"utilidades/variables";
 
 @import "otros/headeryfooter";
 @import "partials/index";
