--- a/sass/partials/_bombonera.scss
+++ b/sass/partials/_bombonera.scss
@@ -38,6 +38,7 @@
         color: #0033a0;
         text-decoration: underline;
      }
+
  }
  .grid-container {
     display: grid;
@@ -50,6 +51,10 @@
         width: 100%;
         height: 100%;
         object-fit: contain;
+        transition: 1s;
+        &:hover{
+          transform: scale(0.8);
+        }
       
     }
     .img1{
