--- a/sass/partials/_contactanos.scss
+++ b/sass/partials/_contactanos.scss
@@ -2,13 +2,13 @@
 /*Contactanos*/
 // Contactanos
 .contactanos{
-    background-color: #F6F1F1;
-    color: #0033a0;
+    background-color: $color-blanco;
+    color: $color-azul;
     font-family: 'Bebas Neue', sans-serif;
     h1{
-        @include titulos(center,#ffd600,0px 0px 7px rgba(0,0,0,0.57),underline);
+        @include titulos(center,$color-amarillo,0px 0px 7px rgba(0,0,0,0.57),underline);
         font-family: 'Oswald', sans-serif;
-        color: #0033a0;
+        color: $color-azul;
         text-align: start;
         text-shadow: none;
     }
@@ -17,12 +17,17 @@
     font-size: 20px;
  }
  .btn{
-    color: #ffd600;
+    color: $color-amarillo;
     font-size: 20px;
-    background-color: #0033a0;
- }
- .btn:hover{
-    color: #ffd600;
-    background-color: #0033a0;
-    text-decoration: underline;
+    background-color: $color-azul;
+   &:hover{
+      color: #ffd600;
+      background-color: #0033a0;
+      text-decoration: underline;
+   }
+   &:focus{
+      color: $color-azul;
+      background-color: $color-amarillo;
+      text-decoration: underline;
+   }
  }
