--- a/sass/partials/_index.scss
+++ b/sass/partials/_index.scss
@@ -2,7 +2,7 @@
 // INDEX
 /*INDEX*/
 main{
-    background-color: #F6F1F1;
+    background-color: $color-blanco;
 }
 
 // titulo y banner
@@ -12,7 +12,7 @@ main{
     height: 200px;
     background-size: cover;
     h1{
-       @include titulos(center, #ffd600, 0px 0px 7px rgba(0,0,0,0.57), underline );
+       @include titulos(center, $color-amarillo, 0px 0px 7px rgba(0,0,0,0.57), underline );
        font-family: 'Oswald', sans-serif;
     }
 
@@ -22,7 +22,7 @@ main{
 /*presentacion*/
 .presentacion{
     font-family: 'Bebas Neue', sans-serif;
-    color: black;
+    color: $color-negro;
     p{
         text-align: justify;
         text-shadow: 0px 0px 7px rgba(0,0,0,0.57);
@@ -39,8 +39,8 @@ main{
 
 .noticias{
     font-family: 'Bebas Neue', sans-serif;
-    color: #0033a0;
-    background-color: #ffd600;
+    color: $color-azul;
+    background-color: $color-amarillo;
     .not1{
         display: flex;
         flex-direction: column;
@@ -66,9 +66,9 @@ main{
 .card{
     box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.74);
     font-size: 120%;
-    background-color: #0033a0;
+    background-color: $color-azul;
     a{
-        color: #ffd600;
+        color: $color-amarillo;
     }
     .bvp{
         width: 300px;
