--- a/sass/partials/_plantel.scss
+++ b/sass/partials/_plantel.scss
@@ -2,7 +2,7 @@
 /* Plantel 2023 */
 // plantel 2023
 main{
-    background-color: #F6F1F1;
+    background-color: $color-blanco;
 }
 /*banner*/
 // Banner
@@ -11,7 +11,7 @@ main{
     height: 200px;
     background-size: cover;
     h1{
-        @include titulos(center,#ffd600,0px 0px 7px rgba(0,0,0,0.57),underline);
+        @include titulos(center,$color-amarillo,0px 0px 7px rgba(0,0,0,0.57),underline);
         font-family: 'Oswald', sans-serif;
     }
     
@@ -24,7 +24,7 @@ main{
     h2{
         text-align: center;
         font-family: 'Oswald', sans-serif;
-        color:#0033a0;
+        color:$color-azul;
        text-decoration: underline;
     }
 
@@ -38,24 +38,30 @@ main{
 // Cards
  .card{
     font-family: 'Bebas Neue', sans-serif;
-    color:#ffd600;
-    background-color: #0033a0;
+    color:$color-amarillo;
+    background-color: $color-azul;
     font-size: 150%;
     text-shadow: none;
     text-decoration: none;
+    margin-bottom: 10px;
+    transition: 0.3s;
     ul{
         list-style-type: none;
     }
-    margin-bottom: 10px;
+  
+    &:hover{
+       transform: scale(0.8);
+        
+    }
   }
 /*Cuerpo tecnico*/
 // Cuerpo Tecnico
 .cuerpo-tecnico{
     text-align: center;
     font-family: 'Oswald', sans-serif;
-    color:#0033a0;
+    color:$color-azul;
    text-decoration: underline;
-   background-color: #ffd600;
+   background-color: $color-amarillo;
    border: 5px solid transparent;
    box-sizing: border-box; 
 }
