--- a/sass/otros/_mediaq.scss
+++ b/sass/otros/_mediaq.scss
@@ -36,13 +36,15 @@
    }
 //   La Bombonera
    /* La bombonera */
-  .historia iframe{
-     width: 500px;
-     margin-bottom: 10px;
-  }
-  .historia h2{
-     text-align: center;
-  }
+   .historia{
+      iframe{
+         width: 500px;
+         margin-bottom: 10px;
+      }
+      h2{
+         text-align: center;
+      }
+   }
   .img5{
      display: none;
   }
