--- a/sass/partials/_index.scss
+++ b/sass/partials/_index.scss
@@ -19,10 +19,9 @@
 .presentacion{
     background-color: $color-blanco;
     font-family: 'Bebas Neue', sans-serif;
-    color: $color-negro;
+    color: $color-azul;
     p{
         text-align: justify;
-        text-shadow: 0px 0px 7px rgba(0,0,0,0.57);
     }
     iframe{
         box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.74);
@@ -42,7 +41,7 @@
         flex-direction: column;
         img{
             box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.74);
-            width: 65%;
+            width: 80%;
         }
         h2{
             font-family: 'Oswald', sans-serif;
@@ -59,10 +58,17 @@
     //  cards
     /*cards*/
     .card{
-        box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.74);
-        font-size: 120%;
+        font-family: 'Bebas Neue', sans-serif;
+        color:$color-amarillo;
         background-color: $color-azul;
-        transition: 1s;
+        font-size: 150%;
+        text-shadow: none;
+        text-decoration: none;
+        margin-bottom: 10px;
+        box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.74);
+        transition: 0.3s;
+    
+        margin-bottom: 10px;
         &:hover{
             transform: scale(0.8);
         }
@@ -72,15 +78,16 @@
         a{
             color: $color-amarillo;
         }
-        .bvp{
-            width: 300px;
-        }
-        .rojo{
-            width: 300px;
-        }
-        .medina{
-            width: 300px;
-        }
+
+        // .bvp{
+        //     width: 100%;
+        // }
+        // .rojo{
+        //     width: 100%;
+        // }
+        // .medina{
+        //     width: 100%;
+        // }
         
     }
 }
