--- a/sass/partials/_contactanos.scss
+++ b/sass/partials/_contactanos.scss
@@ -14,6 +14,10 @@
     }
     .formulario{
       font-size: 20px;
+      iframe{
+         width: 100%;
+         margin-top: 10px;
+      }
       .btn{
          color: $color-amarillo;
          font-size: 20px;
