--- a/sass/partials/_hitos.scss
+++ b/sass/partials/_hitos.scss
@@ -14,6 +14,11 @@
 //  La sexta
  .la-sexta{
     background-color: $color-blanco;
+    .carousel{
+        img{
+            width: 100%;
+        }
+    }
     h2{
         font-family: 'Oswald', sans-serif;
         color:$color-azul;
